--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "xmler",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "repository": {
     "type": "git",
     "url": "http://github.com/ZJONSSON/xmler.git"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Ziggy Jonsson (ziggy.jonsson.nyc@gmail.com)",
   "license": "MIT",
   "dependencies": {
     "node-expat": "^2.3.15"
+  },
+  "devDependencies": {
+    "mocha": "~2.5.3"
+  },
+  "scripts": {
+    "test": "./node_modules/mocha/bin/mocha"
   }
 }
