--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-expat": "^2.3.15"
   },
   "devDependencies": {
-    "mocha": "~2.5.3"
+    "mocha": "~2.5.3",
+    "bluebird": "~3.5.1"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
