--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmler",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -10,7 +10,7 @@
   "author": "Ziggy Jonsson (ziggy.jonsson.nyc@gmail.com)",
   "license": "MIT",
   "dependencies": {
-    "node-expat": "~2.3.17"
+    "node-expat": "sutoiku/node-expat#a27cdc5"
   },
   "devDependencies": {
     "tap": "^12.0.1",
